; ModuleID = '/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/extr_free-space.c_add_rollback_space.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/filesystems/btrfs/extr_free-space.c_add_rollback_space.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32*, i8*, i8*, i32*, i32* }

@PagedPool = common dso_local global i32 0, align 4
@ALLOC_TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"out of memory\0A\00", align 1
@ROLLBACK_ADD_SPACE = common dso_local global i32 0, align 4
@ROLLBACK_SUBTRACT_SPACE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32*, i8*, i8*, i32*)* @add_rollback_space to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_rollback_space(i32* %0, i32 %1, i32* %2, i32* %3, i8* %4, i8* %5, i32* %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32* %2, i32** %10, align 8
  store i32* %3, i32** %11, align 8
  store i8* %4, i8** %12, align 8
  store i8* %5, i8** %13, align 8
  store i32* %6, i32** %14, align 8
  %16 = load i32, i32* @PagedPool, align 4
  %17 = load i32, i32* @ALLOC_TAG, align 4
  %18 = call %struct.TYPE_4__* @ExAllocatePoolWithTag(i32 %16, i32 40, i32 %17)
  store %struct.TYPE_4__* %18, %struct.TYPE_4__** %15, align 8
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %20 = icmp ne %struct.TYPE_4__* %19, null
  br i1 %20, label %23, label %21

21:                                               ; preds = %7
  %22 = call i32 @ERR(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  br label %50

23:                                               ; preds = %7
  %24 = load i32*, i32** %10, align 8
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 4
  store i32* %24, i32** %26, align 8
  %27 = load i32*, i32** %11, align 8
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 3
  store i32* %27, i32** %29, align 8
  %30 = load i8*, i8** %12, align 8
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 2
  store i8* %30, i8** %32, align 8
  %33 = load i8*, i8** %13, align 8
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 1
  store i8* %33, i8** %35, align 8
  %36 = load i32*, i32** %14, align 8
  %37 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %38 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %37, i32 0, i32 0
  store i32* %36, i32** %38, align 8
  %39 = load i32*, i32** %8, align 8
  %40 = load i32, i32* %9, align 4
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %42, label %44

42:                                               ; preds = %23
  %43 = load i32, i32* @ROLLBACK_ADD_SPACE, align 4
  br label %46

44:                                               ; preds = %23
  %45 = load i32, i32* @ROLLBACK_SUBTRACT_SPACE, align 4
  br label %46

46:                                               ; preds = %44, %42
  %47 = phi i32 [ %43, %42 ], [ %45, %44 ]
  %48 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %49 = call i32 @add_rollback(i32* %39, i32 %47, %struct.TYPE_4__* %48)
  br label %50

50:                                               ; preds = %46, %21
  ret void
}

declare dso_local %struct.TYPE_4__* @ExAllocatePoolWithTag(i32, i32, i32) #1

declare dso_local i32 @ERR(i8*) #1

declare dso_local i32 @add_rollback(i32*, i32, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
